--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,3 +1,3 @@
 <h2>Lista de Categorias</h2>
 <hr>
-<a href="/admin/categoria/add"><button class="btn btn-success">Nova Categoria</button></a>
+<a href="/admin/categorias/add"><button class="btn btn-success">Nova Categoria</button></a>
