--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,3 +1,16 @@
 <h2>Lista de Categorias</h2>
 <hr>
 <a href="/admin/categorias/add"><button class="btn btn-success">Nova Categoria</button></a>
+
+{{#each categorias}}
+    <div class="card">
+        <div class="card-body">
+            <h4>{{this.name}}</h4>
+            <small>slug: {{slug}}</small> <br>
+            <small>data de criação: {{date}}</small> <br>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Categoria</button></a>
+        </div>
+    </div>
+{{else}}
+    
+{{/each}}
