--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -9,8 +9,12 @@
             <small>slug: {{slug}}</small> <br>
             <small>data de criação: {{date}}</small> <br>
             <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Categoria</button></a>
+            <form action="/admin/categorias/delete" method="post">
+                <input type="hidden" name="id" id="id" value="{{_id}}">
+                <button type="submit" class="btn btn-danger mt-2">Deletar Categoria</button> 
+            </form>
         </div>
     </div>
 {{else}}
-    
+    <h4 class="mt-3">Nenhuma Categoria Registrada</h4>
 {{/each}}
