--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,9 @@
     {{>_navbar}}
 
     <div class="container mt-4">
+        {{#if error}}
+            <div class="alert alert-danger">{{error}}</div>
+        {{/if}}
         {{>_msg}}
         {{{body}}}
     </div>
