--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 
 {{#each postagens}}
 
-<div class="card">
+<div class="card mb-2">
     <div class="card-body">
         <h3>{{title}}</h3>
         <p>{{description}}</p>
